--- a/debian/changelog
+++ b/debian/changelog
@@ -16,8 +16,8 @@ debhelper (10.2.4) UNRELEASED; urgency=medium
   [ Translations ]
   * Update Portuguese translation (Américo Monteiro)
     (Closes: #851207)
-  * Update French translation (Baptiste Jammet)
-    (Closes: #852211)
+  * Update French translation (Baptiste Jammet)  (Closes: #852211)
+  * Update German translation (Chris Leick)  (Closes: #851962)
 
  -- Niels Thykier <niels@thykier.net>  Thu, 12 Jan 2017 07:00:19 +0000
 
