--- a/man/po4a/po/fr.po
+++ b/man/po4a/po/fr.po
@@ -1461,9 +1461,9 @@ msgid ""
 "generates maintainer scripts for those files. Use B<dh_systemd_enable> and "
 "B<dh_systemd_start> instead."
 msgstr ""
-"B<dh_installinit> n'installe plus de fichiers F<service> ou F<tmpfile>, ni ne "
-"crée de scripts de maintenance pour ces fichiers. Utilisez B<"
-"dh_systemd_enable> et B<dh_systemd_start> à la place."
+"B<dh_installinit> n'installe plus de fichiers F<service> ou F<tmpfile>, ni "
+"ne crée de scripts de maintenance pour ces fichiers. Utilisez "
+"B<dh_systemd_enable> et B<dh_systemd_start> à la place."
 
 # type: =item
 #. type: textblock
@@ -1511,8 +1511,9 @@ msgid ""
 "B<dh_installdirs> no longer creates debian/I<package> directories unless "
 "explicitly requested (or it has to create a subdirectory in it)."
 msgstr ""
-"B<dh_installdirs> ne crée plus les répertoires debian/I<paquet> sans qu'on le "
-"lui demande explicitement (ou il doit créer un sous-répertoire à l'intérieur)."
+"B<dh_installdirs> ne crée plus les répertoires debian/I<paquet> sans qu'on "
+"le lui demande explicitement (ou il doit créer un sous-répertoire à "
+"l'intérieur)."
 
 #. type: textblock
 #: debhelper.pod:620
@@ -1540,14 +1541,15 @@ msgid ""
 "buildpackage -nc>) will behave as most people would expect."
 msgstr ""
 "D'un autre côté, cela signifie que la reconstruction sans nettoyage "
-"(« clean », par exemple B<dpkg-buildpackage -nc>) se comportera comme attendu."
+"(« clean », par exemple B<dpkg-buildpackage -nc>) se comportera comme "
+"attendu."
 
 #. type: textblock
 #: debhelper.pod:633
 msgid "The previous behaviour can restored by using B<--with build-stamp>"
 msgstr ""
-"Le comportement précédent peut être retrouvé en utilisant B<--with "
-"build-stamp>"
+"Le comportement précédent peut être retrouvé en utilisant B<--with build-"
+"stamp>"
 
 #. type: =head2
 #: debhelper.pod:639
@@ -1841,8 +1843,7 @@ msgstr ""
 "     my $exit_code = ($? >> 8) & 0xff;\n"
 "     my $signal = $? & 0x7f;\n"
 "     if ($exit_code) {\n"
-"         die(\"Le script debhelper a échoué avec le code d'erreur : "
-"${exit_code}\");\n"
+"         die(\"Le script debhelper a échoué avec le code d'erreur : ${exit_code}\");\n"
 "     } else {\n"
 "         die(\"Le script debhelper a été tué par le signal : ${signal}\");\n"
 "     }\n"
@@ -2233,9 +2234,6 @@ msgstr ""
 
 #. type: textblock
 #: debhelper-obsolete-compat.pod:12
-#| msgid ""
-#| "* The package must be using compatibility level 9 or later (see "
-#| "L<debhelper(7)>)"
 msgid "For upgrades from supported compat levels, please see L<debhelper(7)>."
 msgstr ""
 "Pour les mises à jour depuis un niveau de compatibilité encore pris en "
@@ -2256,7 +2254,6 @@ msgstr ""
 
 #. type: =item
 #: debhelper-obsolete-compat.pod:21
-#| msgid "v10"
 msgid "v1"
 msgstr "v1"
 
@@ -2340,7 +2337,6 @@ msgstr "v4"
 # type: textblock
 #. type: textblock
 #: debhelper-obsolete-compat.pod:62
-#| msgid "Changes from v5 are:"
 msgid "Changes from v3 are:"
 msgstr "Les changements par rapport à la version 3 sont :"
 
@@ -3892,8 +3888,7 @@ msgstr ""
 #: dh_clean:19
 #, no-wrap
 msgid ""
-"B<dh_clean> is a debhelper program that is responsible for cleaning up after "
-"a\n"
+"B<dh_clean> is a debhelper program that is responsible for cleaning up after a\n"
 "package is built. It removes the package build directories, and removes some\n"
 "other files including F<debian/files>, and any detritus left behind by other\n"
 "debhelper commands. It also removes common files that should not appear in a\n"
@@ -3901,12 +3896,9 @@ msgid ""
 "  #*# *~ DEADJOE *.orig *.rej *.SUMS TAGS .deps/* *.P *-stamp\n"
 "\n"
 msgstr ""
-"B<dh_clean> est le programme de la suite debhelper chargé du nettoyage, "
-"après\n"
-"la construction du paquet. Il supprime les répertoires de construction, ainsi "
-"que\n"
-"d'autres fichiers y compris F<debian/files>. Il supprime aussi tous les "
-"résidus laissés\n"
+"B<dh_clean> est le programme de la suite debhelper chargé du nettoyage, après\n"
+"la construction du paquet. Il supprime les répertoires de construction, ainsi que\n"
+"d'autres fichiers y compris F<debian/files>. Il supprime aussi tous les résidus laissés\n"
 "par les autres commandes de debhelper, ainsi que les dossiers communs qui ne\n"
 "doivent pas apparaître dans un diff Debian :\n"
 "#*# *~ DEADJOE *.orig *.rej *.SUMS TAGS .deps/* *.P *-stamp\n"
@@ -6369,9 +6361,6 @@ msgstr "debian/I<paquet>.service"
 # type: textblock
 #. type: textblock
 #: dh_installinit:49
-#| msgid ""
-#| "If this exists, it is installed into lib/systemd/system/I<package>."
-#| "service in the package build directory."
 msgid ""
 "If this exists, it is installed into lib/systemd/system/I<package>.service "
 "in the package build directory. Only used in compat levels 10 and below."
@@ -6389,10 +6378,6 @@ msgstr "debian/I<paquet>.tmpfile"
 # type: textblock
 #. type: textblock
 #: dh_installinit:54
-#| msgid ""
-#| "If this exists, it is installed into usr/lib/tmpfiles.d/I<package>.conf "
-#| "in the package build directory. (The tmpfiles.d mechanism is currently "
-#| "only used by systemd.)"
 msgid ""
 "If this exists, it is installed into usr/lib/tmpfiles.d/I<package>.conf in "
 "the package build directory. (The tmpfiles.d mechanism is currently only "
@@ -8193,8 +8178,7 @@ msgid ""
 " libfoobar 1 libfoobar1\n"
 "\n"
 msgstr ""
-"En admettant que le paquet s'appelle F<libtoto1>, cette commande produit un "
-"fichier\n"
+"En admettant que le paquet s'appelle F<libtoto1>, cette commande produit un fichier\n"
 "shlibs tel que :\n"
 "libtoto 1 libtoto1\n"
 "\n"
@@ -8215,8 +8199,7 @@ msgid ""
 " libfoobar 1 libfoobar1 (>= 1.1)\n"
 "\n"
 msgstr ""
-"En admettant que la version actuelle du paquet soit 1.1-3, cette commande "
-"produit un fichier shlibs tel que :\n"
+"En admettant que la version actuelle du paquet soit 1.1-3, cette commande produit un fichier shlibs tel que :\n"
 " libtoto 1 libtoto1 (>= 1.1)\n"
 "\n"
 
@@ -8258,10 +8241,6 @@ msgstr ""
 # type: textblock
 #. type: textblock
 #: dh_md5sums:20
-#| msgid ""
-#| "B<dh_md5sums> is a debhelper program that is responsible for generating a "
-#| "F<DEBIAN/md5sums> file, which lists the md5sums of each file in the "
-#| "package.  These files are used by the B<debsums> package."
 msgid ""
 "B<dh_md5sums> is a debhelper program that is responsible for generating a "
 "F<DEBIAN/md5sums> file, which lists the md5sums of each file in the "
@@ -8270,8 +8249,8 @@ msgid ""
 msgstr ""
 "B<dh_md5sums> est le programme de la suite debhelper chargé de produire un "
 "fichier F<DEBIAN/md5sums> indiquant la somme md5 de chacun des fichiers du "
-"paquet. Ces fichiers sont habituellement exploités par B<dpkg --verify> ou le "
-"programme L<debsums(1)>."
+"paquet. Ces fichiers sont habituellement exploités par B<dpkg --verify> ou "
+"le programme L<debsums(1)>."
 
 # type: textblock
 #. type: textblock
@@ -9071,12 +9050,10 @@ msgstr ""
 #: dh_strip:98
 #, no-wrap
 msgid ""
-"  dh_strip --dbgsym-migration='libfoo-tools-dbg (<< 2.1-3~), libfoo2-dbg (<< "
-"2.1-3~)'\n"
+"  dh_strip --dbgsym-migration='libfoo-tools-dbg (<< 2.1-3~), libfoo2-dbg (<< 2.1-3~)'\n"
 "\n"
 msgstr ""
-"  dh_strip --dbgsym-migration='libtoto-tools-dbg (<< 2.1-3~), libtoto2-dbg (<"
-"< 2.1-3~)'\n"
+"  dh_strip --dbgsym-migration='libtoto-tools-dbg (<< 2.1-3~), libtoto2-dbg (<< 2.1-3~)'\n"
 "\n"
 
 # type: =item
