--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (10.2.4) UNRELEASED; urgency=medium
+debhelper (10.2.4) unstable; urgency=medium
 
   [ Niels Thykier ]
   * d/changelog: Add missing changelog entry in 10.2.3 for a
@@ -19,7 +19,7 @@ debhelper (10.2.4) UNRELEASED; urgency=medium
   * Update French translation (Baptiste Jammet)  (Closes: #852211)
   * Update German translation (Chris Leick)  (Closes: #851962)
 
- -- Niels Thykier <niels@thykier.net>  Thu, 12 Jan 2017 07:00:19 +0000
+ -- Niels Thykier <niels@thykier.net>  Mon, 23 Jan 2017 20:28:37 +0000
 
 debhelper (10.2.3) unstable; urgency=medium
 
