Add Japanese translations of documentation
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (10.2.5) UNRELEASED; urgency=medium
+
+  [ Translations ]
+  * Add Japanese translation (Hideki Yamane)  (Closes: #852520)
+
+ -- Niels Thykier <niels@thykier.net>  Wed, 25 Jan 2017 20:38:48 +0000
+
 debhelper (10.2.4) unstable; urgency=medium
 
   [ Niels Thykier ]
