--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-debhelper (10.2.5) UNRELEASED; urgency=medium
+debhelper (10.2.5) unstable; urgency=medium
 
   [ Translations ]
   * Add Japanese translation (Hideki Yamane)  (Closes: #852520)
 
- -- Niels Thykier <niels@thykier.net>  Wed, 25 Jan 2017 20:38:48 +0000
+ -- Niels Thykier <niels@thykier.net>  Wed, 25 Jan 2017 20:47:27 +0000
 
 debhelper (10.2.4) unstable; urgency=medium
 
