--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (10.2.5~bpo8+1) jessie-backports; urgency=medium
+
+  * Rebuild for jessie-backports.
+  * Existing changes from previous bpo releases:
+    - Disable automatic dbgsym as it requires dpkg-dev 1.18.2
+    - Revert of sgml-base trigger as it needs a newer version
+      of sgml-base (Related bug: #825005)
+
+ -- Niels Thykier <niels@thykier.net>  Sat, 18 Feb 2017 10:01:20 +0000
+
 debhelper (10.2.5) unstable; urgency=medium
 
   [ Translations ]
