Set PKG_CONFIG for makefile buildsystems
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (10.2.6) UNRELEASED; urgency=medium
+
+  * Supply PKG_CONFIG for cross compilation with the makefile buildsystem.
+    (Closes: #853881)
+
+ -- Helmut Grohne <helmut@subdivi.de>  Sat, 18 Feb 2017 17:49:08 +0000
+
 debhelper (10.2.5) unstable; urgency=medium
 
   [ Translations ]
