makefile.pm: Disable stripping via INSTALL in compat 11
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -632,6 +632,12 @@ expect.
 
 The previous behaviour can restored by using B<--with build-stamp>
 
+=item -
+
+The B<makefile> buildsystem now passes B<INSTALL=install
+--strip-program=true> to L<make(1)>.  Derivative buildsystems
+(e.g. B<configure> or B<cmake>) are unaffected by this change.
+
 =back
 
 =back
