--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,15 @@
 debhelper (10.2.6) UNRELEASED; urgency=medium
 
+  [ Helmut Grohne ]
   * Supply PKG_CONFIG for cross compilation with the makefile buildsystem.
     (Closes: #853881)
   * Disable stripping during dh_auto_* in makefile buildsystem in compat 11.
     (Closes: #844077)
+
+  [ Niels Thykier ]
+  * Dh_Lib.pm: Make getpackages() produce the correct result independently
+    of the order of the fields in a given paragraph of debian/control.
+    (Closes: #847138)
 
  -- Helmut Grohne <helmut@subdivi.de>  Sat, 18 Feb 2017 17:49:08 +0000
 
