Dh_Lib: Provide deprecated_functionality helper
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -592,7 +592,7 @@ B<dh_systemd_start> instead.
 
 =item -
 
-The B<-s> (B<--same-arch>) option is removed.
+The B<-s> (B<--same-arch>) option is removed.  Please use B<-a> (B<--arch>) instead.
 
 =item -
 
