dh_auto_configure: wrong CMAKE_SYSTEM_NAME for kfreebsd cross-builds
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,11 @@ debhelper (10.2.6) UNRELEASED; urgency=medium
     of the order of the fields in a given paragraph of debian/control.
     (Closes: #847138)
 
+  [ Steven Chamberlain ]
+  * When cross-compiling for GNU/kFreeBSD host systems, set
+    CMAKE_SYSTEM_NAME to the correct value "kFreeBSD", not "FreeBSD".
+    (Closes: #856688)
+
  -- Helmut Grohne <helmut@subdivi.de>  Sat, 18 Feb 2017 17:49:08 +0000
 
 debhelper (10.2.5) unstable; urgency=medium
