dh_gencontrol: Discard "Multi-Arch: no"
As dak auto-rejects packages with those uploads and we may want to use
an explicit "no" to disable future auto-computation of the Multi-Arch
field.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ debhelper (10.2.6) UNRELEASED; urgency=medium
     (Closes: #853881)
   * Disable stripping during dh_auto_* in makefile buildsystem in compat 11.
     (Closes: #844077)
+  * Remove explicit "Multi-Arch: no" stanzas as they are auto-rejected.
+    (Closes: #857028)
 
   [ Niels Thykier ]
   * Dh_Lib.pm: Make getpackages() produce the correct result independently
