dh_systemd_enable: Improve the wording of --no-enable
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,10 @@ debhelper (10.2.6) UNRELEASED; urgency=medium
     CMAKE_SYSTEM_NAME to the correct value "kFreeBSD", not "FreeBSD".
     (Closes: #856688)
 
+  [ Felipe Sateler ]
+  * dh_systemd_enable.1: Improve the wording of the documentation for
+    the --no-enable option.  (Closes: #844602)
+
  -- Helmut Grohne <helmut@subdivi.de>  Sat, 18 Feb 2017 17:49:08 +0000
 
 debhelper (10.2.5) unstable; urgency=medium
