dh_install: Mark --(list|fail)-missing as deprecated
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -638,6 +638,12 @@ The B<makefile> buildsystem now passes B<INSTALL=install
 --strip-program=true> to L<make(1)>.  Derivative buildsystems
 (e.g. B<configure> or B<cmake>) are unaffected by this change.
 
+=item -
+
+The B<--list-missing> and B<--fail-missing> in B<dh_install> has been
+removed.  Please use B<dh_missing> and its corresponding options,
+which can also see the files installed by other helpers.
+
 =back
 
 =back
