dh_prep: Clean up debian/.debhelper/generated/$pkg
That way, the generated files behave like other temporary debhelper
files (which is what they are designed to be).

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,8 @@ debhelper (10.3) UNRELEASED; urgency=medium
   * dh_install: Deprecate --list-missing/--fail-missing in favor of the
     new dh_missing tool.  The options will be removed in compat 11.
   * dh: Run dh_missing by default (in no op mode).
+  * dh_prep: Clean up generated files so they work like other temporary
+    debhelper files.
 
   [ Steven Chamberlain ]
   * When cross-compiling for GNU/kFreeBSD host systems, set
