dh_installinit: Document a caveat in compat 10 and earlier
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,9 @@ debhelper (10.3) UNRELEASED; urgency=medium
   * dh: Run dh_missing by default (in no op mode).
   * dh_prep: Clean up generated files so they work like other temporary
     debhelper files.
+  * dh_installinit: Clarify that it might make sense to skip dh_installinit
+    for a package if it provides a systemd service but no sysvinit file.
+    (Closes: #800043)
 
   [ Steven Chamberlain ]
   * When cross-compiling for GNU/kFreeBSD host systems, set
