dh_installinit: Remove --no-restart-*on*-upgrade in compat 11
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -644,6 +644,11 @@ The B<--list-missing> and B<--fail-missing> in B<dh_install> has been
 removed.  Please use B<dh_missing> and its corresponding options,
 which can also see the files installed by other helpers.
 
+=item -
+
+The B<--no-restart-on-upgrade> option in dh_installinit has been removed.
+Please use the new name B<--no-stop-on-upgrade>
+
 =back
 
 =back
