dh_systemd_enable: Expand on the --no-enable documentation
Clarify that dh_systemd_enable --no-enable does *not* control whether
the service is started.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,9 @@ debhelper (10.3) UNRELEASED; urgency=medium
     Michael Biebl for the help.  (Closes: #837528)
   * debian/rules: Only apply the --no-parallel to dh_auto_test.  The rest
     of debhelper's build appears to work fine with --parallel.
+  * dh_systemd_enable.1: Clarify that --no-enable does not control
+    whether a service is started and that dh_systemd_start is the tool
+    that does that.  (Closes: #770281)
 
   [ Steven Chamberlain ]
   * When cross-compiling for GNU/kFreeBSD host systems, set
