d/changelog: Add a bug to in a Closes
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -47,7 +47,7 @@ debhelper (10.3) UNRELEASED; urgency=medium
 
   [ Michael Stapelberg ]
   * dh_missing: New tool to handle --list-missing/--fail-missing.
-    (Closes: #415396)
+    (Closes: #415396, #616070)
   * Dh_Lib.pm: Introduce a log_installed_files sub that can be used
     to inform dh_missing that a given file has been installed.
 
