autoconf.pm: Pass --runstatedir=/run in compat 11
Suggested-by: Michael Biebl <biebl@debian.org>
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -649,6 +649,11 @@ which can also see the files installed by other helpers.
 The B<--no-restart-on-upgrade> option in dh_installinit has been removed.
 Please use the new name B<--no-stop-on-upgrade>
 
+=item -
+
+The B<autoconf> buildsystem now passes B<--runstatedir=/run> to
+F<./configure>.
+
 =back
 
 =back
