--- a/debian/changelog
+++ b/debian/changelog
@@ -32,6 +32,8 @@ debhelper (10.3) UNRELEASED; urgency=medium
   * dh_systemd_enable.1: Clarify that --no-enable does not control
     whether a service is started and that dh_systemd_start is the tool
     that does that.  (Closes: #770281)
+  * autoconf.pm: Set --runstatedir to "/run" in compat 11.  Thanks to
+    Michael Biebl for the suggestion.
 
   [ Steven Chamberlain ]
   * When cross-compiling for GNU/kFreeBSD host systems, set
