dh_link.1: Improve the documentation
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -53,6 +53,11 @@ debhelper (10.3) UNRELEASED; urgency=medium
   * Dh_Lib.pm: Introduce a log_installed_files sub that can be used
     to inform dh_missing that a given file has been installed.
 
+  [ Johannes Schauer ]
+  * dh_link.1: Improve the documentation and use ln(1) as a reference
+    to make it simplier for people, who are used to the terms from ln.
+    (Closes: #860091)
+
  -- Helmut Grohne <helmut@subdivi.de>  Sat, 18 Feb 2017 17:49:08 +0000
 
 debhelper (10.2.5) unstable; urgency=medium
