d/changelog: Add changelog entries for dh_fixperm changes
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -34,6 +34,9 @@ debhelper (10.3) UNRELEASED; urgency=medium
     that does that.  (Closes: #770281)
   * autoconf.pm: Set --runstatedir to "/run" in compat 11.  Thanks to
     Michael Biebl for the suggestion.
+  * dh_fixperms: Refactor to reduce the constant overhead a bit and
+    extract some patterns into data list.  The latter hopefully reducing
+    the need for tweaking dh_fixperms' logic.
 
   [ Steven Chamberlain ]
   * When cross-compiling for GNU/kFreeBSD host systems, set
