dh_installdocs: Document another --link-doc limitation
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -37,6 +37,9 @@ debhelper (10.3) UNRELEASED; urgency=medium
   * dh_fixperms: Refactor to reduce the constant overhead a bit and
     extract some patterns into data list.  The latter hopefully reducing
     the need for tweaking dh_fixperms' logic.
+  * dh_installdocs: Document that --link-doc has limitations on source and
+    target package plus that compat 10 will reject unsupported
+    combinations.
 
   [ Steven Chamberlain ]
   * When cross-compiling for GNU/kFreeBSD host systems, set
