dh_strip: Correct dbgsym creation check
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -43,6 +43,8 @@ debhelper (10.3) UNRELEASED; urgency=medium
   * dh_gencontrol: Avoid adding Homepage fields to dbgsym packages.  Avoids
     non-overridable warnings from lintian when there is an issue in the
     homepage field of the original binary.  (Closes: #812248)
+  * dh_strip: Fix a check that could cause dh_strip to generate dbgsym
+    packages when it should not.
 
   [ Steven Chamberlain ]
   * When cross-compiling for GNU/kFreeBSD host systems, set
