dh_installman: Improve description and add example config file
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -49,6 +49,8 @@ debhelper (10.3) UNRELEASED; urgency=medium
     has been removed in stretch.
   * python_support.pm: Remove the content with a deprecation warning as
     the module can no longer do anything.
+  * dh_installman.1: Improve the manpage to clarify the scope of
+    dh_installman and provide an examples.  (Closes: LP: #184156)
 
   [ Steven Chamberlain ]
   * When cross-compiling for GNU/kFreeBSD host systems, set
