Remove remains of dh_pysupport
There is no point in loading a sequence that conditionally adds a tool
that no longer exists.  Just give a deprecation warning for people
still explicitly loading it and drop the rest.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -432,6 +432,10 @@ in --libexecdir when using autoconf.
 
 B<dh> does not default to enabling --with=python-support
 
+(Obsolete: As the B<dh_pysupport> tool was removed from Debian
+stretch.  Since debhelper/10.3, B<dh> no longer enables this sequence
+add-on regardless of compat level)
+
 =item -
 
 All of the B<dh_auto_>I<*> debhelper programs and B<dh> set
