--- a/debian/changelog
+++ b/debian/changelog
@@ -75,7 +75,7 @@ debhelper (10.3) UNRELEASED; urgency=medium
 
   [ Johannes Schauer ]
   * dh_link.1: Improve the documentation and use ln(1) as a reference
-    to make it simplier for people, who are used to the terms from ln.
+    to make it simpler for people, who are used to the terms from ln.
     (Closes: #860091)
 
  -- Helmut Grohne <helmut@subdivi.de>  Sat, 18 Feb 2017 17:49:08 +0000
