--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (10.3) UNRELEASED; urgency=medium
+debhelper (10.3) experimental; urgency=medium
 
   [ Helmut Grohne ]
   * Supply PKG_CONFIG for cross compilation with the makefile buildsystem.
@@ -78,7 +78,7 @@ debhelper (10.3) UNRELEASED; urgency=medium
     to make it simpler for people, who are used to the terms from ln.
     (Closes: #860091)
 
- -- Helmut Grohne <helmut@subdivi.de>  Sat, 18 Feb 2017 17:49:08 +0000
+ -- Niels Thykier <niels@thykier.net>  Sat, 06 May 2017 13:29:31 +0000
 
 debhelper (10.2.5) unstable; urgency=medium
 
