--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (10.4) UNRELEASED; urgency=medium
+
+  * meson.pm: Pass --wrap-mode=nodownload to meson (requires meson
+    0.40-1 or later).
+
+ -- Niels Thykier <niels@thykier.net>  Sat, 06 May 2017 16:04:36 +0000
+
 debhelper (10.3) experimental; urgency=medium
 
   [ Helmut Grohne ]
