Regression in dh_fixperms causing packages to be non-reproducible
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,13 @@
 debhelper (10.4) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * meson.pm: Pass --wrap-mode=nodownload to meson (requires meson
     0.40-1 or later).
+
+  [ Chris Lamb ]
+  * dh_fixperms: Fix regression where dh_fixperms would fail to correct
+    permissions because it used an invalid find expression.
+    (Closes: #862003)
 
  -- Niels Thykier <niels@thykier.net>  Sat, 06 May 2017 16:04:36 +0000
 
