Fix dh_install's call to dh_missing
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,10 @@ debhelper (10.4) UNRELEASED; urgency=medium
   [ Niels Thykier ]
   * meson.pm: Pass --wrap-mode=nodownload to meson (requires meson
     0.40-1 or later).
+  * dh_install: Fix initialized warning when --sourcedir is absent
+    on the cmd-line.
+  * dh_missing: Accept --sourcedir (given it is passed by dh_install).
+    (Closes: #862049)
 
   [ Chris Lamb ]
   * dh_fixperms: Fix regression where dh_fixperms would fail to correct
