Dh_Lib: Fix bug in dh's internal pkgfile API
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,9 @@ debhelper (10.4) UNRELEASED; urgency=medium
     on the cmd-line.
   * dh_missing: Accept --sourcedir (given it is passed by dh_install).
     (Closes: #862049)
+  * Dh_Lib.pm: Fix a bug in pkgfile that caused dh to skip helpers
+    that had configuration files.  Thanks to Michael Biebl for finding
+    and reporting.  (Closes: #863387)
 
   [ Chris Lamb ]
   * dh_fixperms: Fix regression where dh_fixperms would fail to correct
