--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,6 @@
-debhelper (10.4) UNRELEASED; urgency=medium
+debhelper (10.4) experimental; urgency=medium
+
+  * Team upload.
 
   [ Niels Thykier ]
   * meson.pm: Pass --wrap-mode=nodownload to meson (requires meson
@@ -16,7 +18,7 @@ debhelper (10.4) UNRELEASED; urgency=medium
     permissions because it used an invalid find expression.
     (Closes: #862003)
 
- -- Niels Thykier <niels@thykier.net>  Sat, 06 May 2017 16:04:36 +0000
+ -- Michael Biebl <biebl@debian.org>  Fri, 26 May 2017 22:08:37 +0200
 
 debhelper (10.3) experimental; urgency=medium
 
