dh_installman: Fix mode and avoid chown call
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (10.5) UNRELEASED; urgency=medium
+
+  * dh_installman: Remove unncessary "chown" call that made things a
+    lot slower.  Thanks to Kurt Roeckx for reporting it.
+  * dh_installman: Fix wrong permission of man pages (set 0755 instead
+    of 0644).  Regression introduced in 10.2.2.
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 04 Jun 2017 11:09:56 +0000
+
 debhelper (10.4) experimental; urgency=medium
 
   * Team upload.
