dh_installman: Batch chmod calls
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ debhelper (10.5) UNRELEASED; urgency=medium
     lot slower.  Thanks to Kurt Roeckx for reporting it.
   * dh_installman: Fix wrong permission of man pages (set 0755 instead
     of 0644).  Regression introduced in 10.2.2.
+  * dh_installman: Batch chmod calls to reduce the overhead for
+    packages with many manpages.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 04 Jun 2017 11:09:56 +0000
 
