dh_prep: Bulk delete most files and dirs

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,9 +11,9 @@ debhelper (10.5) UNRELEASED; urgency=medium
     override targets to be ignored.  Thanks to Gianfranco Costamagna
     for reporting it and Iain Lane for tracing it to the commit
     that introduced the issue.  (Closes: #863887)
-  * dh_clean: Bulk delete most files and directories, which gives a
-    noticable speed up for source packages building many binary
-    packages.
+  * dh_clean, dh_prep: Bulk delete most files and directories, which
+    gives a noticable speed up for source packages building many
+    binary packages.
 
   [ Iain Lane ]
   * Dh_Lib: Re-add warning + exit 0 for the -i/-a shortcut that was
