dh_shlipdeps: Avoid creating d/pkg/DEBIAN if not needed
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,8 @@ debhelper (10.5) UNRELEASED; urgency=medium
   * dh_clean, dh_prep: Bulk delete most files and directories, which
     gives a noticable speed up for source packages building many
     binary packages.
+  * dh_shlibdeps: Avoid creating debian/<pkg>/DEBIAN directory if it
+    is not needed.
 
   [ Iain Lane ]
   * Dh_Lib: Re-add warning + exit 0 for the -i/-a shortcut that was
