Fix typo in error message
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,7 @@ debhelper (10.5) UNRELEASED; urgency=medium
     binary packages.
   * dh_shlibdeps: Avoid creating debian/<pkg>/DEBIAN directory if it
     is not needed.
+  * Dh_Lib.pm: Fix typo in error message.
 
   [ Iain Lane ]
   * Dh_Lib: Re-add warning + exit 0 for the -i/-a shortcut that was
