dh_shlibdeps: Avoid calling file(1) on debug symbols
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,7 @@ debhelper (10.5) UNRELEASED; urgency=medium
     permits it.
   * dh_installchangelogs: Ditto.
   * dh_compress: Ditto
+  * dh_shlibdeps: Avoid calling file(1) on debug symbols.
 
   [ Iain Lane ]
   * Dh_Lib: Re-add warning + exit 0 for the -i/-a shortcut that was
