--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,8 @@ debhelper (10.5) UNRELEASED; urgency=medium
   * dh_installchangelogs: Ditto.
   * dh_compress: Ditto
   * dh_shlibdeps: Avoid calling file(1) on debug symbols.
+  * SUPPORT-POLICY: Include new document that describes the current
+    support policy of debhelper compat levels.
 
   [ Iain Lane ]
   * Dh_Lib: Re-add warning + exit 0 for the -i/-a shortcut that was
