dh_installman: Run in parallel
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,7 @@ debhelper (10.5) UNRELEASED; urgency=medium
     permits it.
   * dh_installchangelogs: Ditto.
   * dh_compress: Ditto
+  * dh_installman: Ditto
   * dh_shlibdeps: Avoid calling file(1) on debug symbols.
   * SUPPORT-POLICY: Include new document that describes the current
     support policy of debhelper compat levels.
