--- a/debian/changelog
+++ b/debian/changelog
@@ -27,8 +27,9 @@ debhelper (10.5) UNRELEASED; urgency=medium
   * dh_fixperms: Run package updates in parallel if DEB_BUILD_OPTIONS
     permits it.
   * dh_installchangelogs: Ditto.
-  * dh_compress: Ditto
-  * dh_installman: Ditto
+  * dh_compress: Ditto.
+  * dh_installman: Ditto.
+  * dh_genchanges: Ditto.
   * dh_shlibdeps: Avoid calling file(1) on debug symbols.
   * SUPPORT-POLICY: Include new document that describes the current
     support policy of debhelper compat levels.
