Dh_Lib: Use :unix with :gzip layer
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -33,6 +33,8 @@ debhelper (10.5) UNRELEASED; urgency=medium
   * dh_shlibdeps: Avoid calling file(1) on debug symbols.
   * SUPPORT-POLICY: Include new document that describes the current
     support policy of debhelper compat levels.
+  * Dh_Lib.pm: Pass ":unix" layer when using the ":gzip" layer due to
+    PerlIO-gzip bug RT#114557.
 
   [ Iain Lane ]
   * Dh_Lib: Re-add warning + exit 0 for the -i/-a shortcut that was
