--- a/debian/changelog
+++ b/debian/changelog
@@ -30,6 +30,8 @@ debhelper (10.5) UNRELEASED; urgency=medium
   * dh_compress: Ditto.
   * dh_installman: Ditto.
   * dh_genchanges: Ditto.
+  * dh_builddeb: Rewrite the hand-written parallel code to use the new
+    simplier way of doing it.
   * dh_shlibdeps: Avoid calling file(1) on debug symbols.
   * SUPPORT-POLICY: Include new document that describes the current
     support policy of debhelper compat levels.
