--- a/debian/changelog
+++ b/debian/changelog
@@ -30,6 +30,7 @@ debhelper (10.5) UNRELEASED; urgency=medium
   * dh_compress: Ditto.
   * dh_installman: Ditto.
   * dh_genchanges: Ditto.
+  * dh_shlibdeps: Ditto.
   * dh_builddeb: Rewrite the hand-written parallel code to use the new
     simplier way of doing it.
   * dh_shlibdeps: Avoid calling file(1) on debug symbols.
