Dh_Lib: Ignore empty dpkg-architecture ENV variables
dpkg-architecture ignores them and instead computes the expected value
(as if the variable had not been set in the first place).

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -38,6 +38,8 @@ debhelper (10.5) UNRELEASED; urgency=medium
     support policy of debhelper compat levels.
   * Dh_Lib.pm: Pass ":unix" layer when using the ":gzip" layer due to
     PerlIO-gzip bug RT#114557.
+  * Dh_Lib.pm: Ignore empty dpkg-architecture variables.
+    (Closes: #862844)
 
   [ Iain Lane ]
   * Dh_Lib: Re-add warning + exit 0 for the -i/-a shortcut that was
