dh_installchangelogs: Don't use a directory as a changelog
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -40,6 +40,9 @@ debhelper (10.5) UNRELEASED; urgency=medium
     PerlIO-gzip bug RT#114557.
   * Dh_Lib.pm: Ignore empty dpkg-architecture variables.
     (Closes: #862844)
+  * dh_installchangelogs: Avoid trying to install a directory by default
+    as a changelog file.  Thanks to Markus Koschany for reporting the
+    issue.  (Closes: #861852)
 
   [ Iain Lane ]
   * Dh_Lib: Re-add warning + exit 0 for the -i/-a shortcut that was
