dh_isntallwm.1: Correct documentation
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -43,6 +43,9 @@ debhelper (10.5) UNRELEASED; urgency=medium
   * dh_installchangelogs: Avoid trying to install a directory by default
     as a changelog file.  Thanks to Markus Koschany for reporting the
     issue.  (Closes: #861852)
+  * dh_installwm.1: Correct documentation to reflect the behaviour in
+    compat 10.  Thanks to Robert Luberda for reporting the issue.
+    (Closes: #865708)
 
   [ Iain Lane ]
   * Dh_Lib: Re-add warning + exit 0 for the -i/-a shortcut that was
