dh_installcatalogs: Use explicit await triggers
Short term solution to avoid lintian warnings from debhelper inserted
glue.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -46,6 +46,8 @@ debhelper (10.5) UNRELEASED; urgency=medium
   * dh_installwm.1: Correct documentation to reflect the behaviour in
     compat 10.  Thanks to Robert Luberda for reporting the issue.
     (Closes: #865708)
+  * dh_installcatalogs: Use explicit await triggers to avoid trigger
+    a lintian warning.
 
   [ Iain Lane ]
   * Dh_Lib: Re-add warning + exit 0 for the -i/-a shortcut that was
