dh_installman: In c11, detect manpage language from path
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -650,13 +650,18 @@ which can also see the files installed by other helpers.
 
 =item -
 
-The B<--no-restart-on-upgrade> option in dh_installinit has been removed.
+The B<--no-restart-on-upgrade> option in B<dh_installinit> has been removed.
 Please use the new name B<--no-stop-on-upgrade>
 
 =item -
 
 The B<autoconf> buildsystem now passes B<--runstatedir=/run> to
 F<./configure>.
+
+=item -
+
+The B<dh_installman> helper will now prefer detecting the language from the
+path name rather than the extension.
 
 =back
 
