dh_installcatalogs: Check the return code of close
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -53,6 +53,8 @@ debhelper (10.5) UNRELEASED; urgency=medium
     extention.  This is more reliably for packages using dh_installman
     to install manpages from the temporary install dir.
     (Closes: #761024)
+  * dh_installcatalogs: Check the return code of close when generating
+    a catalog for sgml-base.
 
   [ Iain Lane ]
   * Dh_Lib: Re-add warning + exit 0 for the -i/-a shortcut that was
