dh_md5sums: Process packages in parallel
Re-indent of code pending next commit.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -32,6 +32,7 @@ debhelper (10.5) UNRELEASED; urgency=medium
   * dh_installman: Ditto.
   * dh_genchanges: Ditto.
   * dh_shlibdeps: Ditto.
+  * dh_md5sums: Ditto.
   * dh_builddeb: Rewrite the hand-written parallel code to use the new
     simplier way of doing it.
   * dh_shlibdeps: Avoid calling file(1) on debug symbols.
