--- a/debhelper.pod
+++ b/debhelper.pod
@@ -660,12 +660,12 @@ F<./configure>.
 
 =item -
 
-The B<dh_installman> helper will now prefer detecting the language from the
+B<dh_installman> will now prefer detecting the language from the
 path name rather than the extension.
 
 =item -
 
-The B<dh_auto_install> helper will now only create the destination
+B<dh_auto_install> will now only create the destination
 directory it needs.  Previously, it would create the package build
 directory for all packages.  This will not affect packages that only
 build with debhelper commands, but it may expose bugs in commands not
